camila-orchestration/int/k8s/DDBB/camila-product-ddbb.yml
# sources: 
# - https://devopscube.com/deploy-mongodb-kubernetes/
# - https://github.com/scriptcamp/kubernetes-mongodb

---
apiVersion: v1
kind: Namespace
metadata:
  name: mongodb
spec: {}
status: {}

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: mongo
  name: mongo
  namespace: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  strategy: {}
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
      - image: mongodb/mongodb-community-server:6.0-ubi8
        name: camila-product-db
        resources:
          limits:
            cpu: "2"
            memory: 4096Mi
          requests:
            cpu: "1"
            memory: 1024Mi
        volumeMounts:
        - name: "mongo-data-dir"
          mountPath: "/data/db"
      volumes:
      - name: "mongo-data-dir"
        persistentVolumeClaim:
          claimName: "mongo-data"
          readOnly: false

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mongo
  name: mongo-nodeport-svc
  namespace: mongodb
spec:
  ports:
  - port: 27017
    protocol: TCP
    targetPort: 27017
    nodePort: 32000
  selector:
    app: mongo
  type: NodePort

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongo-ingress
  namespace: mongodb
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: mongo-nodeport-svc
            port:
              number: 32000
